fix: address code review issues in batch tick endpoint
Critical:
- Add @Validated + @Size(min=1, max=50) on symbols param to prevent unbounded requests
- Replace serial loop with parallelStream() for concurrent provider calls
- Use ConcurrentSkipListMap for thread-safe parallel writes, return TreeMap for stable order

Major:
- Change List<String> to Set<String> to deduplicate symbols before querying
- Replace Collectors.toList() with .toList() (Java 21)

Minor:
- Wrap each symbol's getTick() in try-catch to isolate failures in batch requests
- Add MissingServletRequestParameterException handler (400) so missing symbols param
  does not fall through to the generic 502 handler
- Add spring-boot-starter-validation dependency

Tests:
- Add 5 unit tests for getBatchTick in MarketDataServiceImplTest
- Add 4 integration tests for /batch/tick in MarketDataControllerIntegrationTest

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>