@@ -2,14 +2,17 @@ package com.trading.marketdata.controller;
 
 import com.trading.marketdata.domain.*;
 import com.trading.marketdata.service.MarketDataService;
+import jakarta.validation.constraints.Size;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Set;
 
+@Validated
 @RestController
 @RequestMapping("/api/v1/market-data")
 public class MarketDataController {
@@ -49,8 +52,8 @@ public class MarketDataController {
 
     @GetMapping("/batch/tick")
     public ResponseEntity<Map<String, TickQuote>> getBatchTick(
-            @RequestParam List<String> symbols) {
-        List<String> upper = symbols.stream().map(String::toUpperCase).collect(Collectors.toList());
+            @RequestParam @Size(min = 1, max = 50, message = "symbols must contain between 1 and 50 entries") List<String> symbols) {
+        Set<String> upper = Set.copyOf(symbols.stream().map(String::toUpperCase).toList());
         return ResponseEntity.ok(service.getBatchTick(upper));
     }
 
@@ -58,6 +61,20 @@ public class MarketDataController {
     public ResponseEntity<Void> refresh(@PathVariable String symbol) {
         service.refresh(symbol.toUpperCase());
         return ResponseEntity.noContent().build();
+    }
+
+    @ExceptionHandler(org.springframework.web.bind.MissingServletRequestParameterException.class)
+    public ResponseEntity<Map<String, String>> handleMissingParam(
+            org.springframework.web.bind.MissingServletRequestParameterException e) {
+        return ResponseEntity.badRequest().body(Map.of("error", e.getMessage()));
+    }
+
+    @ExceptionHandler(jakarta.validation.ConstraintViolationException.class)
+    public ResponseEntity<Map<String, String>> handleValidation(jakarta.validation.ConstraintViolationException e) {
+        String message = e.getConstraintViolations().stream()
+                .map(v -> v.getMessage())
+                .findFirst().orElse(e.getMessage());
+        return ResponseEntity.badRequest().body(Map.of("error", message));
     }
 
     @ExceptionHandler(Exception.class)
